--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,5 +1,7 @@
 <h1>Display your Pirate here</h1>
-
+<% @pirates.each do |pirate| %>
+  <li><em>Name: <%= pirate.name %></em></li>
+<% end %>
 
 <h2>Display your first ship here</h2>
 
